--- a/changelog.org
+++ b/changelog.org
@@ -6,6 +6,13 @@
 All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
+
+* [2022-11-02 Wed]
+** Fixed
+- Use correct HTML anchor tag inside public.html <noscript>
+  - PR: https://github.com/200ok-ch/organice/pull/902
+  - Thank you [[https://github.com/josephmturner][josephmturner]] for the PR🙏
+
 * [2022-07-08 Fri]
 ** Fixed
 - When opening an Org file, show it from the top
