doc: Update changelog

--- a/changelog.org
+++ b/changelog.org
@@ -9,6 +9,13 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 
 * [2023-01-04 Wed]
 
+** Added
+
+- Option to display DEADLINE values as an addition (near the clocking value) on each headline
+  - The default for this option is false - so there is no change to the default behavior of Organice - until you enable this option via Settings.
+  - PR: https://github.com/200ok-ch/organice/pull/891
+  - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏
+
 ** Fixed
 
 - Rotation of table editor icons to reflect their action.
