doc: Deadline options in sample.org

--- a/changelog.org
+++ b/changelog.org
@@ -11,8 +11,8 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 
 ** Added
 
-- Option to display DEADLINE values as an addition (near the clocking value) on each headline
-  - The default for this option is false - so there is no change to the default behavior of Organice - until you enable this option via Settings.
+- Option to display DEADLINE values (near the clocking value) on each headline
+  - The default for this option is false - so there is no change to the default behavior - until you enable this option via Settings.
   - PR: https://github.com/200ok-ch/organice/pull/891
   - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏
 
