--- a/changelog.org
+++ b/changelog.org
@@ -22,6 +22,11 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
   - PR: https://github.com/200ok-ch/organice/pull/890
   - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏
 
+- Prevent the user from invalidating her Org file by entering a description that leads with =*=
+  - If the user starts any line with a =*=, wanting to start a new list, it is immediately converted to a =-=.
+  - PR: https://github.com/200ok-ch/organice/pull/920
+  - Thank you [[https://github.com/saikiransathpadi][saikiransathpadi]] for the PR🙏
+
 ** Changed
 
 - Disable auto-capitalization for search
