--- a/changelog.org
+++ b/changelog.org
@@ -7,6 +7,14 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2023-01-05 Thu]
+
+** Fixed
+
+- Deadline overlay UI improvements
+  - PR: https://github.com/200ok-ch/organice/pull/925
+  - Thank you [[https://github.com/dmorlitz][dmorlitz]] for the PR🙏
+
 * [2023-01-04 Wed]
 
 ** Added
