--- a/README.org
+++ b/README.org
@@ -107,7 +107,9 @@ instructions:
     and select "Add to homescreen".
 
   - On Firefox, "menu" button (three vertically stacked dots)
-    and select "Install".
+    and select "Install". If you don't have that option, you may have
+    one to tap the home icon with the plus sign inside it which
+    is immediately to the right of the URL in the address bar.
 
   - Other browsers may have a similar procedure to one of these.
 
