--- a/changelog.org
+++ b/changelog.org
@@ -7,6 +7,14 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2023-04-11 Tue]
+
+** Changed
+
+- Ticking a checkbox should only tick the checkbox, not enable the list item manipulating functions from =handleListItemSelect=.
+  - Relevant discussion: https://github.com/200ok-ch/organice/discussions/950
+  - PR: https://github.com/200ok-ch/organice/pull/951
+
 * [2023-04-10 Mon]
 
 ** Fixed
