--- a/contrib/organice-webdav-traefik/README.org
+++ b/contrib/organice-webdav-traefik/README.org
@@ -25,7 +25,7 @@ version: "3.7"
 services:
   traefik:
     container_name: traefik
-    image: "traefik:latest"
+    image: "traefik:v2.10"
     command:
       - --entrypoints.websecure.address=:443
       - --entrypoints.web.address=:80
