--- a/README.org
+++ b/README.org
@@ -622,7 +622,7 @@ deployed via FTP. The full build script is in
 organice is also available as a Docker image.
 
 The docker image recognizes a couple of environment variables. For
-example =ORGANICE_WEBDAV_URL= prefills the URL field in the WebDAV
+example =REACT_APP_WEBDAV_URL= prefills the URL field in the WebDAV
 signin form. See [[https://github.com/200ok-ch/organice/blob/master/docker-compose.yaml][docker-compose.yaml]] for an example how to use it.
 
 A full list of such environment variables can be found in [[https://github.com/200ok-ch/organice/blob/master/.env.sample][.env.sample]].
