--- a/WIKI.org
+++ b/WIKI.org
@@ -67,38 +67,30 @@
      :END:
 
  For testing purposes, we use a Docker image with a proven and well
- documented server: Apache2 running on Debian. You can build the Docker
- image yourself - and customize the Apache configuration to your needs:
+ documented server: Apache2 running on Debian. The WebDAV service is defined
+ in the main =docker-compose.yml= file and can be used in both development
+ and production profiles.
 
- #+BEGIN_SRC shell
-   docker build -f doc/webdav/Dockerfile -t apache-webdav .
- #+END_SRC
+ You can build the Docker image yourself - and customize the Apache configuration
+ to your needs by editing =doc/webdav/Dockerfile=.
 
- or with docker-compose:
-
+ To build the WebDAV server image:
  #+begin_src shell
-   docker-compose build apache-webdav
+   docker compose --profile dev build apache-webdav # Or --profile prod
  #+end_src
 
- Then run the Apache2 WebDAV server with:
-
- #+BEGIN_SRC shell
-   docker run -dit --name apache-webdav-app -p 8080:80 apache-webdav
- #+END_SRC
-
- or with docker-compose:
-
+ Then run the Apache2 WebDAV server:
  #+begin_src shell
-   docker-compose up apache-webdav
+   docker compose --profile dev up -d apache-webdav # Or --profile prod
  #+end_src
 
  On your host machine, you can now login with any WebDAV client using
- the URL =http://localhost:8080/webdav=. There is no authentication
+ the URL =http://localhost:8080/webdav/=. There is no authentication
  configuration, so any user account works (including omitted user
  accounts). It goes without saying that if you wanted to use this for
  production, please enable authentication. Within the test image,
  you'll find the [[https://github.com/200ok-ch/organice/blob/master/sample.org][sample.org]] file, so you can get started developing and
- testing right away.
+ testing right away. The WebDAV service is available in both =dev= and =prod= profiles.
 
  For testing WebDAV outside of organice, and you're an Emacs user, you
  can open [[/dav:localhost#8080:/webdav/][this]] link (=C-c C-o=). Then, you will get a [[https://www.gnu.org/software/tramp/][TRAMP]] session
