doc: Update changelog

--- a/changelog.org
+++ b/changelog.org
@@ -7,6 +7,12 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2025-05-24 Sat]
+** Fixed
+*** Table add/remove button inverted
+
+PR: https://github.com/200ok-ch/organice/pull/1024
+
 * [2025-05-22 Thu]
 
 ** Changed
