--- a/test_helpers/fixtures/various_todos.org
+++ b/test_helpers/fixtures/various_todos.org
@@ -4,3 +4,8 @@
 * TODO Task with active timestamp and repeater <2020-11-15 Sun +1d>
 * TODO Repeating task
   SCHEDULED: <2019-11-27 Wed +1d>
+* TODO Not done
+* TODO Not done with logs 
+:LOGBOOK:
+CLOCK: [2025-06-01 Sun 00:29]--[2025-06-01 Sun 00:38] =>  0:09
+:END:
