--- a/changelog.org
+++ b/changelog.org
@@ -7,6 +7,18 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2025-06-22 Sun]
+
+** Fixed
+
+*** When exporting to email, don't just export the selected headline, but sub-headlines
+
+** Added
+
+*** Users can now share their headlines (including sub-headlines) to any app - with a fallback to mail.
+
+- PR: https://github.com/200ok-ch/organice/pull/1036
+
 * [2025-06-18 Wed]
 
 ** Fixed
