--- a/changelog.org
+++ b/changelog.org
@@ -7,6 +7,16 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2025-07-26 Sat]
+
+** Fixed
+
+*** Action Drawer buttons not clickable
+
+The fix from yesterday introduced a regression. Now, we have a fix for
+the regression and the initial bug report.
+
+
 * [2025-07-24 Thu]
 
 ** Fixed
